...
    <string name="select_mode">Select Mode</string>
    <string name="select_all">Select All</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="row_inserted">Row Inserted</string>
    <string name="insert_error">Insert Error</string>
    <string name="row_selected">Row Selected</string>
    <string name="rows_selected">Rows Selected</string>
    <string name="row_updated">Row Updated</string>
    <string name="update_error">Update Error</string>
    <string name="row_deleted">Row Deleted</string>
    <string name="rows_deleted">Rows Deleted</string>
    <string name="delete_error">Delete Error</string>
    <string name="delete_warning">Delete Warning</string>
    <string name="containing">Containing</string>
    <string name="row">Row</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="application_version_name">1.0</string>
...
