<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2023 Colin Walters.  All rights reserved.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_insert"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/insert"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/action_update"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/update"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/action_share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/share"/>

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_menu_help"
        android:title="@string/help"/>

    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_menu_about"
        android:title="@string/about"/>

</menu>